# tiktik_rag

./: Dockerfile  README.md  pdf_ingest.json  pyproject.toml
.github/workflows/: ci.yml
tests/: test_chunking.py  test_embedding.py  test_hf_embedding.py  test_media_transcriber.py  test_metadata.py  test_pdf_loader.py  test_response.py  test_retrieval.py  test_service.py
tiktik_rag/: __init__.py  api.py  chunking.py  embedding.py  hf_embedding.py  media_transcriber.py  metadata.py  modalities.py  pdf_loader.py  response.py  retrieval.py  schemas.py  service.py
