[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tiktik-rag"
version = "0.1.0"
description = "Data ingestion utilities for TikTik RAG"
readme = "README.md"
authors = [{name = "TikTik"}]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
ingestion = [
    "pypdf>=3.9",
    "openai-whisper>=20231117",
]

[tool.pytest.ini_options]
addopts = "-q"
