[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tiktik-rag"
version = "0.1.0"
description = "Data ingestion utilities for TikTik RAG"
readme = "README.md"
authors = [{name = "TikTik"}]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.23,<1.0",
]

[project.optional-dependencies]
ingestion = [
    "pypdf>=3.9",
    "openai-whisper>=20231117",
]
embeddings = [
    "sentence-transformers>=2.7.0,<3.0.0",
]

[tool.pytest.ini_options]
addopts = "-q"
